--- a/charts.html
+++ b/charts.html
@@ -144,6 +144,11 @@
 
         <!-- Date/Time -->
         <p>Posted on January 1, 2019 at 12:00 PM</p>
+        <p>Address</p>
+        <p>City</p>
+        <p>ZipCode</p>
+        
+        
 	 <div class="card my-4">
           <h5 class="card-header">Subscribe this Post:</h5>
           <div class="card-body">
